--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -205,7 +205,7 @@ iframe{
 			padding-bottom: 2px; }
 	.dialog-bar-value{ text-align: left !important; color: #486AA3; }
 	.dialog-bar input, .dialog-bar select{ float: left; width: 187px; height: 24px; box-sizing: inherit; outline: none; font-size:16px; }
-	.dialog-bar label{ font-size: 13px; }
+	.dialog-bar label{ font-size: 25px; }
 	.dialog-bar h4{ font-size: 16px; margin-top: 6px; margin-bottom: 6px; }
 	.dialog-bar button{ border: 1px solid #878D99;
 		color: #434D61;
@@ -224,7 +224,7 @@ iframe{
     float: center;
     margin-right: 5px;
     width: 75px;
-    height: 20px;
+    height: 25px;
 }
 	.primaryBtn{
 		border: 1px solid #154792!important;
@@ -303,17 +303,20 @@ iframe{
 			.cfi-menu>i:hover{ background-color: #FFF; }
 #ProfileDiag .dialog-body div{ float: left; }
 	.profile-moremi{ margin-right: 3px; width: 80px; height: 80px; }
-	.profile-head-item{ margin: 3px 2px; width: 213px; }
-		.profile-image{ margin-right: 3px; width: 20px; height: 20px; }
-		.profile-level{ margin-right: 3px; width: 20px; height: 20px; }
-		.profile-title{ padding-top: 1px; font-size: 15px; font-weight: bold; width: 190px; }
+	.profile-head-item{ margin: 3px 2px; width: 278px; }
+		.profile-image{ margin-right: 3px; width: 40px; height: 40px; }
+		.profile-level{ margin-right: 3px; width: 25px; height: 25px; }
+		.profile-title{ padding-top: 1px; font-size: 25px; font-weight: bold; width: 235px; }
 		.profile-tag{ font-size: 11px; color: #777; }
-		.profile-level-text{ padding-top: 2px; font-size: 13px; }
-		.profile-score-text{ float: right !important; padding-top: 3px; font-size: 11px; color: #444444; }
+		.profile-level-text{ padding-top: 2px; font-size: 16px; }
+		.profile-score-text{ float: right !important; padding-top: 3px; font-size: 14px; color: #444444; }
 	.profile-record-field{ margin: 2px 0px; width: 100%; }
 		.profile-field-name{ width: 35%; text-align: center; }
 		.profile-field-record{ width: 32%; text-align: center; }
 		.profile-field-score{ width: 32%; text-align: center; }
+		#profile-dress{
+			width: 90px!important;
+		}
 #RoomInfoDiag .dialog-body div{ float: left; }
 	.ri-player{ margin: 2px 0px; width: 100%; }
 		.rip-moremi{ margin-right: 3px; width: 40px; height: 40px; }
@@ -353,8 +356,19 @@ min-height: 480px;
 		background-color: #E4E4E4;
 		transition: all 300ms ease;
 	}
-		.rooms-create{ background-color: #8EC0F3; }
-		.rooms-create>div{ float: none; padding: 20px 0px; text-align: center; font-size: 15px; font-weight: bold; }
+		.rooms-create{ background-position: center;
+			background-size: cover;
+			background-image: url(/img/kkutu/createRoom.png); }
+		.rooms-create:hover{
+				background-image: url(/img/kkutu/createRoomHover.png); }
+		.rooms-create>div{ text-shadow: 2px 2px 0px black;
+			color: #ffffff;
+			font-style: italic;
+			float: none;
+			padding: 10px 0px;
+			text-align: center;
+			font-size: 30px;
+			font-weight: bold; }
 		.rooms-channel{ position: relative; width: 10px; height: 10px; border-radius: 5px; margin-right: -10px; }
 			.rooms-channel:hover{ width: 8px; height: 8px; border: 1px solid #000; }
 			.channel-1{ background-color: #F99; }
@@ -380,7 +394,8 @@ min-height: 480px;
 min-height: 480px;
 }
 	.ShopBox div{ float: left; }
-	.ShopBox .product-body{ width: 780px; height: 330px; }
+	.ShopBox .product-body{ width: 100%;
+		height: 100%; }
 .RoomBox{
 	min-width: 99.25%;
     max-width: 100%;
@@ -512,7 +527,7 @@ min-height: 480px;
 		}
 	.items{
 		padding-top: 55px;
-		margin: 50px 40px 0px 105px;
+		margin: 50px 40px 0px 360px;
 		width: 100px;
 		height: 45px;
 		font-size: 24px;
@@ -547,7 +562,7 @@ min-height: 480px;
 				border-bottom-left-radius: 0px;
 				border-bottom-right-radius: 0px;
 				width: 476px;
-				height: 23px;
+				height: 33px;
 				font-size: 20px;
 				text-align: center;
 				color: #EEEEEE;
@@ -571,7 +586,7 @@ min-height: 480px;
 				border-left: 1px solid rgba(0, 0, 0, 0.7);
 				border-right: 1px solid rgba(0, 0, 0, 0.7);
 				width: 484px;
-				height: 20px;
+				height: 15px;
 				color: #FFFFFF;
 				box-shadow: none;
 				text-align: right;
@@ -579,7 +594,6 @@ min-height: 480px;
 				overflow: hidden;
 			}
 			.jjoDisplayBar .graph-bar{
-				padding-top: 4px;
 				height: 16px;
 				font-size: 11px;
 				white-space: nowrap;
@@ -612,8 +626,8 @@ min-height: 480px;
 		background-image: url('/img/kkutu/righthand.png');
 	}
 	.rounds{
-		margin-top: -130px;
-		width: 990px;
+		margin-top: -140px;
+		width: 94.5%;
 		color: #FFFFFF;
 		text-align: center;
 		text-shadow: 0px 1px 1px #141414;
@@ -630,6 +644,7 @@ min-height: 480px;
 	}
 		.history{
 			width: 100%;
+			margin-left: 5%;
 			height: 57px;
 		}
 			.history-item{
@@ -647,8 +662,8 @@ min-height: 480px;
 				color: #8ACFFF;
 			}
 			.history-class{
-				padding: 1px;
-				padding: 1px 4px 1px 4ch;
+				margin-left: 4px;
+				padding: 1px 4px 1px 4px;
 				font-size: 11px;
 				color: #111111;
 				background-color: #77AAFF;
@@ -678,9 +693,9 @@ min-height: 480px;
 	.game-input{
 		position: relative;
 		top: -220px;
-		left: 244px;
+		left: 495px;
 		padding: 5px;
-		border-radius: 10px;
+		/* border-radius: 10px; */
 		background-color: rgba(0, 0, 0, 0.7);
 	}
 		#game-input{
@@ -713,7 +728,7 @@ min-height: 480px;
 		.game-user-current{
 			animation: CurrentBlink 2s linear infinite;
 			margin-top: 0px;
-			height: 177px;
+			height: 200px;
 			background-color: #DDFFDD;
 		}
 		.game-user-bomb{ border-color: #FF6666; }
@@ -739,10 +754,9 @@ min-height: 480px;
 		}
 			.result-board-item{
 				padding: 5px;
-				border-radius: 5px;
 				margin: 1px;
 				width: 388px;
-				height: 20px;
+				height: 25px;
 				box-shadow: 0px 1px 1px #CCCCCC;
 				background-color: #F4F4F4;
 			}
@@ -753,7 +767,7 @@ min-height: 480px;
 			}
 				.result-board-rank{ padding-top: 3px; border-radius: 10px; width: 45px; height: 17px; text-align: center; }
 				.result-board-level{ width: 20px; height: 20px; }
-				.result-board-name{ padding-top: 3px; margin-left: 5px; width: 100px; }
+				.result-board-name{ font-weight: 700; padding-top: 3px; margin-left: 5px; width: 100px; }
 				.result-board-score{ padding-top: 3px; width: 80px; text-align: center; }
 				.result-board-reward{ padding-top: 3px; width: 80px; text-align: center; }
 				.result-board-lvup{
@@ -769,7 +783,6 @@ min-height: 480px;
 		.result-me{
 			padding: 3px;
 			border: 1px solid #CCCCCC;
-			border-radius: 5px;
 			margin: 1px;
 			width: 390px;
 			height: 80px;
@@ -783,6 +796,7 @@ min-height: 480px;
 				.result-me-level-body{
 					width: 80px;
 					text-align: center;
+					margin-top: -10px;
 					font-size: 30px;
 					font-weight: bold;
 				}
@@ -798,7 +812,7 @@ min-height: 480px;
 				.result-me-current-bar{ background-image: url('/img/kkutu/currentbar.png'); }
 				.result-me-bonus-bar{ background-image: url('/img/kkutu/bonusbar.png'); }
 				.result-me-score-text{
-					margin-top: -55px;
+					margin-top: -45px;
     margin-left: 80px;
     width: 308px;
     color: #EEEEEE;
@@ -837,12 +851,10 @@ min-height: 480px;
 		text-shadow: none;
 		color: #000; }
 	.category-filter{
-		border-radius: 5px;
 		text-align: center;
-		font-size: 11px;
+		font-size: 15px;
 		cursor: pointer;
-		background-color: #DDDDDD;
-		transition: all 300ms ease;
+		transition: all 100ms ease;
 	}
 	.goods-box{
 		margin-top: 5px;
@@ -852,11 +864,12 @@ min-height: 480px;
 		.dress-type{
 			float: left;
 			padding: 1px 0px;
-			border: 1px solid #AAAAAA;
+			font-weight: 700;
 			margin: 1px;
-			width: 40px;
+			width: 42px;
 		}
-		.category-filter.selected{ color: #EEEEEE; background-color: #111111; }
+		#dress-cf{width:90px!important;}
+		.category-filter.selected{ color: #EEEEEE; background-color: #1597f5; }
 		.category-filter:hover{ background-color: #EEEEEE; }
 		.category-filter.selected:hover{ background-color: #222222; }
 		.dress-item{
