--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -58,11 +58,13 @@ html
 		div#Jungle
 			span#mobile= locals.mobile
 			span#summonerID= DATA._id
-			img#Background(src='/img/bg/' + (locals.bg || 'def.png'))
+			img#Background(src='/img/bg/winter.png')
 			block Jungle
 		div#Middle
 			block Middle
 		div#Bottom
 			block Bottom
-			div.bottom-legal 게임 저작권 정보는 '도움말' 패널을 참고하세요.
+			h4.opt(style='text-align: center;')!= L('dictionarySupport')
+			h4.opt(style='text-align: center;')!= L('etcSupport')
+			h4.opt(style='text-align: center;')!= L('GPL')
 			+separator(10)
