--- a/Server/lib/Web/public/css/in_game_kkutu.css
+++ b/Server/lib/Web/public/css/in_game_kkutu.css
@@ -55,8 +55,8 @@ equ{
 	z-index: 5;
 }
 #Top{
-	background-color: #7CC4F8;
-	background-image: none;
+	background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 #Top .menu-btn{
 	color: #111111;
