--- a/Server/lib/Web/views/portal.pug
+++ b/Server/lib/Web/views/portal.pug
@@ -24,13 +24,10 @@ block CSS
 
 block Middle
 	+separator(5)
-	div(style='float: left; width: 100%;')
+	div(style='float: left; width: 100%; margin-top: 70px; ')
 		div(style='float: left; padding-left: 70px;')
 			h3#holder= L('title').replace(/\[.+?\]/g, "")
 			img#logo(src='/img/kkutu/short_logo.png')
-		div#menu-bar(style='float: right; margin-top: 25px;')
-			a(target='_blank', href='//cafe.naver.com/sdbx', style='background-color: #63A95B;')!= L('sandbox')
-			a(target='_blank', href='//blog.jjo.kr/', style='background-color: #4078DC;')!= L('CREATOR')
 		div.jjoriping(style='margin-top: 40px;')
 			img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png', style='left: -270px;')
 			img.jjoObj.jjoNose(src='/img/jjonose.png', style='left: -170px;')
@@ -46,10 +43,8 @@ block Middle
 				label= L('serverList')
 				label#server-total(style='color: #AAA; font-size: 13px;')
 			div#server-list
-	div(style='float: left; width: calc(100% - 4px); border: 2px solid #CCC; margin-top: 10px; background-color: #EEE;')
+	div(style='float: left; width: calc(100% - 4px); overflow-y: hidden;')
 		iframe#kkutu-bulletin(width='100%', height='400px', src='/kkutu_bulletin.html')
 	+separator(10)
 
 block Bottom
-	div.bottom-legal!= L('dictionarySupport')
-	div.bottom-legal!= L('etcSupport')
