타 끄투 프리서버 언급 제한 및 관리페이지 개선

--- a/Server/lib/Web/views/help.pug
+++ b/Server/lib/Web/views/help.pug
@@ -41,7 +41,7 @@ block Middle
 					li: label 로비
 					li: label 게임 대기실
 					li: label 게임 화면
-					//- li: label 리플레이 화면
+					li: label 리플레이 화면
 			li
 				label 게임 유형
 				ul
@@ -92,10 +92,10 @@ block Middle
 				h3 두근두근 플러스끄투에 오신 것을 환영합니다.
 				h4 끄투에 대한 궁금한 점을 왼쪽 목차에서 골라 풀어 보세요.
 		div.page-body#box-c1
-			iframe(width=355, height=210, src="https://www.youtube.com/embed/e0iD7WXYFBU", frameborder=0, allowfullscreen)
+			iframe(width=355, height=210, src="https://www.youtube.com/embed/5H_tp1i10S4", frameborder=0, allowfullscreen)
 			h4(style='margin-bottom: 5px; text-align: center;') 동영상으로 끄투를 알아 보세요.
 			p
-				| <b>끄투</b>(KKuTu)는 한국어와 영어 단어를 이용하는 웹 실시간 온라인 게임이며,
+				| <b>플러스끄투</b>(Plus KKuTu)는 한국어와 영어 단어를 이용하는 웹 실시간 온라인 게임이며,
 				| 현재 12 종류의 게임 유형이 있습니다.
 				| 게임 유형에 따라 자신의 턴에 적절한 단어를 입력하면 점수를 획득할 수 있습니다.
 				| 게임 내에서 가장 높은 점수를 획득한 참가자가 승리합니다.
@@ -152,8 +152,8 @@ block Middle
 			ul
 				li 게임을 즐기기
 				li 방에 접속한 사람들과 대화하기
-		//-
-			div.page-body#box-c2p4
+		
+		div.page-body#box-c2p4
 				p
 					| 리플레이 화면에서는 리플레이 파일로부터 불러온 정보를 보여주고 있습니다.
 					| 게임 화면과 비슷하지만 상단에 방 정보를 나타내는 대신 리플레이 진행 정보를 나타냅니다.
@@ -339,7 +339,7 @@ block Middle
 				| 하위 항목에서 그런 콘텐츠들을 하나씩 소개하도록 하죠.
 		div.page-body#box-c5p1
 			p
-				| JJO.KR 서버에 로그인하지 않고 끄투 서버에 접속하는 경우 <b>손님 계정</b>으로 간주합니다.
+				| Plus ID로 로그인하지 않고 끄투 서버에 접속하는 경우 <b>손님 계정</b>으로 간주합니다.
 				| 손님 계정은 저장이 필요한 콘텐츠들을 이용할 수 없으니 양해 바랍니다.
 			h4 저장이 필요한 콘텐츠:
 			ul
