--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -338,6 +338,8 @@ block Middle
 			button.primaryBtn#obtain-ok= L('OK')
 	+Dialog('HelpDiag', 300, 400, L('helpText'))
 		iframe#help-board(width=300, height=375)
+	+Dialog('CommunityDiag', 300, 400, "공식 커뮤니티")
+		iframe#community(width=300, height=375)
 	+Product('UserList')
 		div 불러오는 중
 	+Product('RoomList')
