메인페이지 수정 및 코인샵 바로가기 추가, 해상도패치 버그픽스, 블랙리스트 개선

--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -183,6 +183,9 @@ iframe{
 	#HelpBtn:hover{
 		color: #22d3ee;
 	}
+	#Community2Btn:hover{
+		color: #2db400;
+	}
 .dialog{
 	display: none;
 	position: fixed;
@@ -353,7 +356,9 @@ min-height: 480px;
 		/* height: 80px; */
 		box-shadow: 0px 1px 1px #777777;
 		cursor: pointer;
-		background-color: #E4E4E4;
+		background-position: center;
+		background-size: cover;
+		background-image: url(/img/kkutu/room/Waiting.png);
 		transition: all 300ms ease;
 	}
 		.rooms-create{ background-position: center;
@@ -375,10 +380,10 @@ min-height: 480px;
 			.channel-2{ background-color: #FF7; }
 			.channel-3{ background-color: #7C7; }
 			.channel-4{ background-color: #99F; }
-		.rooms-gaming{ background-color: #FFBBBB; }
+		.rooms-gaming{ background-position: center;
+			background-size: cover;
+			background-image: url(/img/kkutu/room/Playing.png); }
 			.rooms-gaming .rooms-number{ border-color: #CC9999; }
-		.rooms-item:hover{ background-color: #F4F4F4; }
-			.rooms-gaming:hover{ background-color: #FFCCCC; }
 			.rooms-create:hover{ background-color: #AADDFF; }
 		.rooms-number{ padding-top: 18px; border-right: 1px solid #CCCCCC; margin-right: 4px; width: 49px; height: 46px; font-size: 24px; }
 		.rooms-title{ padding-top: 4px; width: 270px; height: 20px; font-size: 16px; font-weight: bold; }
@@ -990,7 +995,7 @@ min-height: 480px;
 			.chat-head:hover{ background-color: #FFF; }
 		.chat-body{ float: left; width: calc(100% - 190px); min-height: 14px; }
 .ADBox{
-	width: 1000px;
+	width: 99.35%;
 	box-shadow: 0px 1px 1px #141414;
 	background-color: #232323;
 }
