--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -55,6 +55,24 @@ block Jungle
 	span#RULE= JSON.stringify(locals.RULE)
 	span#OPTIONS= JSON.stringify(locals.OPTIONS)
 	div#Yell
+	div.kkutu-menu
+		button#HelpBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('help')
+		button#SettingBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('settings')
+		button#CommunityBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('community')
+		button#SpectateBtn.for-master.for-normal(style='display: none;'): +FA('eye')
+		button#SetRoomBtn.for-master(style='display: none;'): +FA('wrench')
+		button#NewRoomBtn.for-lobby(style='display: none;'): +FA('plus')
+		button#QuickRoomBtn.for-lobby(style='display: none;'): +FA('bolt')
+		//- button#ShopBtn.for-lobby(style='display: none; background-color: #B3E7B7;'): +FA('shopping-bag')
+		button#DictionaryBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;'): +FA('book')
+		//- button#WordPlusBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #73D07A;')!= L('wordPlus')
+		button#InviteBtn.for-master(style='display: none;'): +FA('user-plus')
+		button#PracticeBtn.for-master.for-normal(style='display: none;'): +FA('plane')
+		button#ReadyBtn.for-normal(style='display: none;'): +FA('play')
+		button#StartBtn.for-master(style='display: none;'): +FA('play-circle')
+		button#ExitBtn.for-master.for-normal.for-gaming(style='display: none;'): +FA('times')
+		button#ReplayBtn.for-lobby(style='display: none;'): +FA('video-camera')
+		button#LeaderboardBtn.for-lobby(style='display: none;'): +FA('trophy')
 	div#Loading= L('LOADING')
 	-
 		LANG['explInjeong'] = `<h5>${L('explInjeong')}</h5>\
@@ -71,24 +89,6 @@ block Middle
 		//- img#intro-start(src='/img/kkutu/intro_start.gif')
 		div#version= VERSION
 		div#intro-text= L('LOADING')
-	div.kkutu-menu
-		button#HelpBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #BBBBBB;')!= L('help')
-		button#SettingBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #CCCCCC;')!= L('settings')
-		button#CommunityBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #DAA9FF;')!= L('community')
-		button#SpectateBtn.for-master.for-normal(style='display: none; background-color: #D19DFF;'): +FA('eye')
-		button#SetRoomBtn.for-master(style='display: none; background-color: #B0D2F3;'): +FA('magic')
-		button#NewRoomBtn.for-lobby(style='display: none; background-color: #8EC0F3;'): +FA('magic')
-		button#QuickRoomBtn.for-lobby(style='display: none; background-color: #B0D2F3;'): +FA('bolt')
-		//- button#ShopBtn.for-lobby(style='display: none; background-color: #B3E7B7;'): +FA('shopping-bag')
-		button#DictionaryBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #73D07A;'): +FA('book')
-		//- button#WordPlusBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #73D07A;')!= L('wordPlus')
-		button#InviteBtn.for-master(style='display: none; background-color: #9FE669;'): +FA('envelope')
-		button#PracticeBtn.for-master.for-normal(style='display: none; background-color: #FCF5A9;'): +FA('plane')
-		button#ReadyBtn.for-normal(style='display: none; background-color: #FFC67F;'): +FA('play')
-		button#StartBtn.for-master(style='display: none; background-color: #FFB576;'): +FA('play-circle')
-		button#ExitBtn.for-master.for-normal.for-gaming(style='display: none; background-color: #FFADAD;'): +FA('times')
-		button#ReplayBtn.for-lobby(style='display: none; background-color: #D9FF82;'): +FA('video-camera')
-		button#LeaderboardBtn.for-lobby(style='display: none; background-color: #FFADD3;'): +FA('trophy')
 	+Dialog('SettingDiag', 300, 240, L('settingsText'))
 		div.dialog-bar
 			h4.opt!= L('mute')
