--- a/Server/lib/Web/public/css/style.css
+++ b/Server/lib/Web/public/css/style.css
@@ -30,6 +30,26 @@ body{
 	min-width: 480px;
 	font-family: 'Noto Sans KR', 돋움;
 }
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555;
+  }
+  
 a{
 	color: inherit;
 	text-decoration: inherit;
@@ -159,12 +179,12 @@ span{
 }
 
 #global-notice{
-	margin-top: 60px;
+	margin-top: 30px;
 	color: white;
 	text-align: center;
 	cursor: pointer;
 	z-index: 5;
-	animation: scroller 60s linear infinite;
+	animation: scroller 75s linear infinite;
 }
 
 #gn-content{
@@ -172,10 +192,10 @@ span{
 	left: 0;
 	right: 0;
 	background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+	background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
 	padding: 3px 0px;
 	z-index: -1;
-	
+	width: max-content;
 }
 .searching{
 	color: #EEEEEE;
