--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -52,7 +52,7 @@ html
 			+MMenu()
 			div#global-notice
 				div#gn-content
-					include ../public/global_notice.html
+					include ../public/global_notice_m.html
 			block Top
 		div#Jungle
 			span#mobile= locals.mobile
@@ -66,7 +66,5 @@ html
 			div.bottom-legal
 				a(href='?pc=true')!= L('AS_PC')
 				br
-				a.bottom-contact(href='http://blog.jjo.kr/', target='_blank')!= L('CREATOR')
-				a.bottom-contact(href='mailto:op@jjo.kr', target='_blank') Contact op@jjo.kr
 			div.bottom-legal!= L('GPL')
 			+separator(40)
