--- a/Server/lib/Web/views/portal.pug
+++ b/Server/lib/Web/views/portal.pug
@@ -22,12 +22,14 @@ block Subject
 block CSS
 	link(rel='stylesheet', href='/css/in_game_kkutu.css')
 
+block Jungle
+	div(style='float: left; width: calc(100% - 4px); overflow-y: hidden; overflow-x: hidden;')
+		iframe#kkutu-bulletin(width='100%', height='500px', src='/kkutu_bulletin.html', style='margin: 0px;')
+		
 block Middle
-	+separator(5)
-	div(style='float: left; width: 100%; margin-top: 70px; ')
+	div(style='float: left; width: 100%; margin-top: 35px; ')
 		div(style='float: left; padding-left: 70px;')
-			h3#holder= L('title').replace(/\[.+?\]/g, "")
-			img#logo(src='/img/kkutu/short_logo.png')
+			img#logo(src='/img/kkutu/placeholder.png', width="200px", height="100px")
 		div.jjoriping(style='margin-top: 40px;')
 			img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png', style='left: -270px;')
 			img.jjoObj.jjoNose(src='/img/jjonose.png', style='left: -170px;')
@@ -43,8 +45,7 @@ block Middle
 				label= L('serverList')
 				label#server-total(style='color: #AAA; font-size: 13px;')
 			div#server-list
-	div(style='float: left; width: calc(100% - 4px); overflow-y: hidden;')
-		iframe#kkutu-bulletin(width='100%', height='400px', src='/kkutu_bulletin.html')
+
 	+separator(10)
 
 block Bottom
