--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -122,7 +122,7 @@ block Middle
 			h4
 			+SettingOption('only-unlock', L('onlyUnlock'), "width: 200px;")
 		div.dialog-bar.tail-button
-			button#setting-ok= L('save')
+			button.primaryBtn#setting-ok= L('save')
 			button#setting-server= L('changeServer')
 	+Dialog('CommunityDiag', 300, 300)
 		div.dialog-bar(style='height: 225px; overflow-y: scroll;')
@@ -406,6 +406,14 @@ block Middle
 		iframe#help-board(width=1000, height=350)
 	+Dialog('Community2Diag', 1280, 750, "공식 커뮤니티")
 		iframe#community2(width=1280, height=700)
+	+Dialog('LicenseDiag', 645, 180, "저작권 정보")
+		h4.opt(style='text-align: center;')!= L('dictionarySupport')
+		h4.opt(style='text-align: center;')!= L('etcSupport')
+		h4.opt(style='text-align: center;')!= L('GPL')
+	+Dialog('NotificationDiag', 700, 180, "플러스끄투 안내")
+		p#alertcon(style='text-align: center;font-size: 18px;')
+		div.dialog-bar.tail-button
+			button.primaryBtn#alert-ok= L('OK')
 	+Product('UserList')
 		div 불러오는 중
 	+Product('RoomList')
@@ -472,6 +480,3 @@ block Middle
 		input#Talk(maxlength=200)
 		button#ChatBtn= L('send')
 	//+Product('AD')
-
-block Bottom
-	
